# llvm-project

./: .project  README.md  present_simple.c
.clacc-ci/: gitlab-ci.yml  kokkos-ornl-int-test.patch  kokkos.patch
clang/: .cproject  .gitignore  .project  README-OpenACC-design.md  README-OpenACC-status.md  build
clang/docs/: OpenMPSupport.rst
clang/include/clang-c/: Index.h
clang/lib/AST/: ASTDumper.cpp  ASTStructuralEquivalence.cpp  AttrImpl.cpp  CMakeLists.txt  CommentedStream.cpp  CommentedStream.h  DeclBase.cpp  DeclPrinter.cpp  DirectiveStmt.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  JSONNodeDumper.cpp  OpenACCClause.cpp  Stmt.cpp  StmtDirective.cpp  StmtOpenACC.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp
clang/lib/Basic/: CMakeLists.txt  OpenACCKinds.cpp
clang/lib/CodeGen/: CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGStmt.cpp  CGStmtOpenMP.cpp  CodeGenFunction.h  CodeGenModule.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Frontend/: ASTConsumers.cpp  CompilerInvocation.cpp  FrontendActions.cpp  InitPreprocessor.cpp  PrintPreprocessedOutput.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/lib/Lex/: Pragma.cpp
clang/lib/Parse/: CMakeLists.txt  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseOpenACC.cpp  ParseOpenMP.cpp  ParsePragma.cpp  ParseStmt.cpp  Parser.cpp
clang/lib/Rewrite/: Rewriter.cpp
clang/lib/Sema/: ACCDataVar.cpp  ACCDataVar.h  CMakeLists.txt  Scope.cpp  Sema.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaDeclCXX.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaInit.cpp  SemaOpenACC.cpp  SemaOpenMP.cpp  SemaOverload.cpp  SemaStmt.cpp  SemaTemplateInstantiateDecl.cpp  TransformACCToOMP.cpp  TransformContext.h  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterStmt.cpp
clang/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
clang/test/CodeGen/: attr-noundef.cpp  indirect-noundef.cpp
clang/test/Driver/: amdgpu-openmp-toolchain.c  openmp-offload-gpu.c
clang/test/OpenACC/: OpenACCTestConfigHelpers.py  README.md  data-messages.c  data.c  enter-exit-data-messages.c  enter-exit-data.c  err-acc-unknown-directive.c  err-acc-unknown-unexpected-directive.c  err-drv-acc-cxx-not-supported.cpp  err-drv-acc-omp-not-supported.c  exit-data-uninit.c  fopenacc-ignores-omp.c  fopenacc-print-basic.c  fopenacc-print-messages.c  fopenacc-print-torture.c  fopenacc-print.c  fopenacc-structured-ref-count-omp.c  linking.c  lit.local.cfg  loop-collapse.c  loop-implicit-gang.c  loop-messages.c  loop-nested.c  loop-private.c  loop-reduction.c  loop.c  no-create-subarray-conflict.c  no-create.c  openacc-version.c  parallel-da.c  parallel-dsa.c  parallel-firstprivate-private.c  parallel-messages.c  parallel-partition-counts.c  parallel-reduction.c  parallel-subarray.c  parallel.c  present.c  routine.c  subarray-errors.c  (+8 more)
clang/test/OpenMP/: declare_variant_ast_print.cpp  target_enter_data_map_messages.c  target_exit_data_map_messages.c  target_globals_codegen.cpp  target_map_names.cpp  x86_declare_variant_name_mangling.cpp
clang/test/Preprocessor/: init.c
clang/tools/driver/: cc1_main.cpp
clang/tools/libclang/: CIndex.cpp  CXCursor.cpp
clang/unittests/Rewrite/: CMakeLists.txt  RewriterTest.cpp
clang/utils/TableGen/: ClangAttrEmitter.cpp
compiler-rt/cmake/: config-ix.cmake
eclipse-run-configs/: local clang - test suite (OpenACC).launch  local clang - test suite.launch  local llvm (core) - test suite.launch  local openmp - test suite.launch
llvm/: .cproject  .gitignore  .project  build
llvm/.tracecompass/: .project
llvm/docs/: TestingGuide.rst
llvm/docs/CommandGuide/: FileCheck.rst  (+1 more)
llvm/runtimes/: CMakeLists.txt
openmp/: .cproject  .gitignore  .project  CMakeLists.txt  build
openmp/libacc2omp/: CMakeLists.txt
openmp/libacc2omp/cmake/: Libacc2ompUtils.cmake
openmp/libacc2omp/src/: CMakeLists.txt  acc-prof.cpp  acc2omp-backend-internal.cpp  acc2omp-backend-internal.h  acc2omp-backend-llvm.cpp  acc2omp-config.h.cmake  acc2omp-internal.h  acc2omp-proxy-internal.cpp  acc2omp-proxy-internal.h  acc2omp-proxy-llvm.cpp  api.cpp  backend-internal.cpp  backend-internal.h  backend-llvm.cpp  config.h.cmake  internal.h  prof.cpp
openmp/libacc2omp/src/exports/: acc2omp-backend.txt  acc2omp-proxy.txt  acc2omp.txt
openmp/libacc2omp/src/include/: acc2omp-backend.h.var  acc2omp-handlers.h.var  acc2omp-proxy.h.var  acc_prof.h.var  openacc.h.var
openmp/libacc2omp/test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  optimizations.c
openmp/libacc2omp/test/acc-prof/: acc-proflib-basic.c  acc-proflib-order.c  api-data.c  basic-registration.c  callbacks.h  data-clauses.c  firstprivate-non-const-array.c  shared-ompt-callback-target-data-op.c
openmp/libacc2omp/test/acc2omp-backend/: acc2omp-fatal.c  acc2omp-warn.c
openmp/libacc2omp/test/acc2omp-backend/Inputs/: acc2omp-backend-test.c
openmp/libacc2omp/test/acc2omp-proxy/: acc2omp-fatal.c  acc2omp-warn.c
openmp/libacc2omp/test/acc2omp-proxy/Inputs/: acc2omp-proxy-test.c
openmp/libacc2omp/test/api/: acc-on-device.c  async.c  data.c  devices-errors.c  devices-init-errors.c  devices-init-errors.multi.c  devices-init.c  devices-init.multi.c  devices.c  devices.multi.c
openmp/libacc2omp/test/directives/: data-extension-errors.c  enter-exit-data-uninit.c  loop-bounds.c  num-workers.c  subarray-errors.c
openmp/libacc2omp/test/prof/: acc-proflib-basic.c  acc-proflib-order.c  all-events.c  alloc-fail.c  basic-registration.c  callbacks.h  data-clauses.c  firstprivate-array.c  firstprivate-const-array.c  firstprivate-non-const-array.c  no-data-clause.c  openacc-version-sync.c  shared-ompt-callback-target-data-op.c  shared-ompt-callback-target.c
openmp/libacc2omp/test/prof/api/: data.c  device-init.c
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/src/: CMakeLists.txt  api.cpp  device.cpp  device.h  exports  interface.cpp  ompt-target.cpp  ompt-target.h  omptarget.cpp  private.h  rtl.cpp  rtl.h
openmp/runtime/: CMakeLists.txt
(+465 files in other folders)
